UNRELEASED

v3.11 (2019-10-26)
    * Add new `user-agent` attribute for configuring email User-Agent

v3.10 (2019-09-01)
    * Catch and warn for invalid Content-Types
    * Add a manually extracted list of config options to r2e.1
    * Add a redirect post-process module
    * Follow symlinks of datafiles
    * Add zsh completion
    * Add support for maildir
    * Fix `r2e new` overwriting an existing config
    * Add new `feed-name` and `feed-url` attributes for the `name-format` setting
    * Change logging format
    * Allow multiple SMTP recipients
    * Fix SMTP security issues
    * Fix test suite
    * Drop support for Python 3.2 and 3.3
    * Remove `__contributors__` from the `rss2email` module
    * Stop using deprecated `html2text.unescape`
    * Fix locking issues when data file is on NFS
    * Add `same-server-fetch-interval` setting for rate-limiting fetches to a server
    * Update setup.py to setuptools

v3.9 (2014-09-01)
    * Catch and error out if a user adds a feed with a duplicate name
    * Split sender into both sendmail's -F and -f
    * Fix an error with SMTPConnectionError inheritance order ("does not take keyword arguments")
    * Add a new `smtp-ssl-protocol` setting, to select acceptable protocols for SMTP connections
    * Fix non-compliant User-Agent header for HTTP/1.1
    * Fix an error in the NoToEmailAddress invocation
    * Add a new `trust-link` setting, to prefer the `link` attribute over the `id` attribute for identifying entries

v3.8 (2014-01-18)
    * Sluggify feed names on opmlimport
    * Allow Unicode letters and digits in feed names, instead of just ASCII letters and digits

v3.7 (2013-10-11)
    * Fix fallback for titles that contain malformed HTML
    * Fix atomic saves to avoid garbling config and data files if the disk is full
    * Convert the `friendly-name` boolean to the new `name-format` setting.  This allow users to customize how the friendly name is constructed